DOM level increase

--- a/Learning_DOM/one.html
+++ b/Learning_DOM/one.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
 
     <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: rgb(11, 11, 22);
+            color: white;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">
-            DOM Learning with Chai Aur Code
+<body class="bg-black">
+    <div >
+        <h1 id="title" class="heading">DOM Learning with Chai Aur Code <span style="display: none;">test text</span>
         </h1>
+        <h2>Lorem, ipsum.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
+        <input type="password" name="" id="">
         <p>Lorem ipsum dolor sit amet.</p>
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
     </div>
 </body>
 </html>
